# sexify

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
sexify/: cli.py  constants.py
sexify/core/: config.py  downloader.py
sexify/services/: amazon.py  cover.py  lyrics.py  qobuz.py  songlink.py  spotify.py  tidal.py
sexify/utils/: analysis.py  ffmpeg.py  filemanager.py  filename.py  logger.py  metadata.py  progress.py
